openshift.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector: { matchLabels: { app: mysql } }
  template:
    metadata: { labels: { app: mysql } }
    spec:
      containers:
        - name: mariadb
          image: docker.io/bitnami/mariadb:11.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
      volumes:
        - name: data
          emptyDir: {}   # Ephemeral (perfetto per demo)
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector: { app: mysql }
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-crud
spec:
  replicas: 1
  selector: { matchLabels: { app: users-crud } }
  template:
    metadata: { labels: { app: users-crud } }
    spec:
      containers:
        - name: app
          image: docker.io/hello96/users-crud:1.3   # <-- sostituisci con il tuo repo
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # Probes rimosse per semplicità; Quarkus espone /q/health se vuoi riattivarle
---
apiVersion: v1
kind: Service
metadata:
  name: users-crud
spec:
  selector: { app: users-crud }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: users-crud
spec:
  to:
    kind: Service
    name: users-crud
  port:
    targetPort: http
  tls:
    termination: edge
